<resources>
    <string name="app_name">Waffle Store</string>
    <string name="text_login">Login</string>
    <string name="text_log_out">Logout</string>
    <string name="text_document">Documents</string>
    <string name="text_register">Register</string>
    <string name="text_add_item_specification">Add Item Specification</string>
    <string name="text_items">Items</string>
    <string name="text_save">Save</string>
    <string name="text_accept">Accept</string>
    <string name="text_reject">Reject</string>
    <string name="text_order">Order</string>
    <string name="text_preparing_order">Start preparing order</string>
    <string name="text_order_ready">Order ready</string>
    <string name="text_assign_provider">Assign delivery to provider</string>
    <string name="text_reassign">Reassign</string>
    <string name="text_are_you_sure">Are you sure ?</string>
    <string name="text_image">Image</string>
    <string name="text_forgot_password">Forgot password?</string>
    <string name="text_no_internet">Your Internet seems to be disabled, you must enable it
        .</string>
    <string name="text_exit">Exit</string>
    <string name="text_name">Name</string>
    <string name="text_email">Email</string>
    <string name="text_phone">Phone</string>
    <string name="text_email_or_phone">Email or Phone</string>
    <string name="text_sms_otp">SMS otp</string>
    <string name="text_email_otp">Email otp</string>
    <string name="text_password">Password</string>
    <string name="text_password_retype">Confirm Password</string>
    <string name="text_change_password">Change Password?</string>
    <string name="text_address">Address</string>
    <string name="text_mobile_no">Mobile No.</string>
    <string name="text_username">Username</string>
    <string name="text_slogan">Slogan</string>
    <string name="text_famous_for">Famous For</string>
    <string name="text_website">Your website</string>
    <string name="text_lat">Latitude</string>
    <string name="text_lng">Longitude</string>
    <string name="text_select_country">Select country</string>
    <string name="text_select_city">Select city</string>
    <string name="text_select_category">Select store type</string>
    <string name="text_choosePicture">Choose Photo</string>
    <string name="text_gallery">Gallery</string>
    <string name="text_camera">Camera</string>
    <string name="text_ok">OK</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_forgot_psw_title">To reset your password,enter the email address you
        use to register.We will sent code on email address.</string>
    <string name="text_product_title">Category Title</string>
    <string name="text_description">Description</string>
    <string name="text_make_visible">Make Visible/Not?</string>
    <string name="text_specification">Specifications</string>
    <string name="text_no_specification">No Specifications</string>
    <string name="text_visible">Visible</string>
    <string name="text_invisible">Invisible</string>
    <string name="text_add_new_specification">+ Add new specification</string>
    <string name="text_add_new_store_time">Schedule Store Time</string>
    <string name="text_push_notification">Push Sound</string>
    <string name="text_orders">Orders</string>
    <string name="text_deliveries">Deliveries</string>
    <string name="text_products">Categories</string>
    <string name="text_product_menu">Product</string>
    <string name="text_subcategories">SubCategories</string>
    <string name="text_item">Product</string>
    <string name="text_profile">Profile</string>
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>
    <string name="text_new_password">New Password</string>
    <string name="text_new_confirm_password">New Confirm Password</string>
    <string name="text_price">Price</string>
    <string name="text_in_stock">In Stock/Not?</string>
    <string name="text_item_specification_name">Item Specification Name</string>
    <string name="text_add_specification">Add Specification</string>
    <string name="text_default">Default</string>
    <string name="text_required">Is required or not?</string>
    <string name="text_verify_account">Verify Account</string>
    <string name="text_verify_details">Verify Detail</string>
    <string name="text_verify_account_msg">Please enter your current password to verify your account</string>
    <string name="text_is_business">Your Business</string>
    <string name="text_tax_on_order_bill">Tax on order bill (%)</string>
    <string name="text_free_delivery_for_above_price">Free delivery for above order price</string>
    <string name="text_app_version">App version</string>
    <string name="text_settings">Settings</string>
    <string name="text_payments">Payments</string>
    <string name="text_wallet">Wallet</string>
    <string name="text_total_order_price">Total Order Price</string>
    <string name="text_order_no">Order No. #</string>
    <string name="text_qty">Qty</string>
    <string name="text_pay">Pay</string>
    <string name="text_view_more"><u>view more</u></string>
    <string name="text_select_any_product">Select Product</string>
    <string name="text_today">Today</string>
    <string name="text_yesterday">Yesterday</string>
    <string name="msg_wait_for_orde_confirmation">Waiting for confirmation.</string>
    <string name="text_status0">Waiting for accept</string>
    <string name="text_status1">Waiting for accept</string>
    <string name="text_status3">Accepted</string>
    <string name="text_status5">Preparing order</string>
    <string name="text_status7">Order ready</string>
    <string name="text_status9">Waiting for deliveryman</string>
    <string name="text_status109">Deliveryman not found</string>
    <string name="text_status11">Deliveryman accepted</string>
    <string name="text_status111">Deliveryman rejected</string>
    <string name="text_status112">Deliveryman cancelled</string>
    <string name="text_status13">Deliveryman coming</string>
    <string name="text_status15">Deliveryman arrived</string>
    <string name="text_status17">Deliveryman picked order </string>
    <string name="text_status19">Deliveryman start delivery </string>
    <string name="text_status21">Deliveryman arrived at destination</string>
    <string name="text_status23">Deliveryman completed delivery</string>
    <string name="text_status101">Order Cancelled.</string>
    <string name="text_status103">You rejected order.</string>
    <string name="text_status104">You cancelled order.</string>
    <string name="text_status105">You cancelled request.</string>
    <string name="text_admin_alert">Admin Alert!</string>
    <string name="text_alert">Alert</string>
    <string name="text_under_review">You will receive confirmation email\nonce admin approve you.</string>
    <string name="text_google_mail_app_not_installed">Google mail app is not installed.</string>
    <string name="text_verify_email_sms">We sent you an email and SMS for verification code.</string>
    <string name="text_verify_email">We sent you an email for verification code.</string>
    <string name="text_verify_sms">We sent you a SMS for verification code.</string>
    <string name="text_confirm_details">Confirm Details</string>
    <string name="text_please_confirm_details">Please confirm your below details.</string>
    <string name="text_new_order_request">This is a new order request !</string>
    <string name="text_order_details">Order Detail</string>
    <string name="text_total">Total</string>
    <string name="text_history">History</string>
    <string name="text_delivery_details">Delivery Details</string>
    <string name="text_time_h_m">Time(h:m)</string>
    <string name="text_distance">Distance</string>
    <string name="text_invoice">Invoice</string>
    <string name="text_from">From</string>
    <string name="text_to">To</string>
    <string name="text_reset">Reset</string>
    <string name="text_apply">Apply</string>
    <string name="text_select_from_date">Select From Date</string>
    <string name="text_select_to_date">Select To Date</string>
    <string name="text_store_time">Store Time</string>
    <string name="text_promo">Promo</string>
    <string name="text_item_name">Product Name</string>
    <string name="text_account">Account</string>
    <string name="text_add_specification_group">+ Add </string>
    <string name="text_specification_group">Specification Groups</string>
    <string name="text_item_in_stock">In Stock</string>
    <string name="text_item_out_stock">Out of\nStock</string>
    <string name="text_or">or</string>
    <string name="text_digits">digits.</string>
    <string name="text_submit">Submit</string>
    <string name="text_mandatory_document">* - indicates mandatory fields</string>
    <string name="text_id_number">ID Number :</string>
    <string name="text_expire_date">Exp.Date :</string>
    <string name="text_set_document_photos">Set document photos</string>
    <string name="text_document_id">Document ID</string>
    <string name="text_document_expire_date">Document Expire Date</string>
    <string name="text_select">SELECT</string>
    <string name="text_price_hint">0.00</string>
    <string name="text_select_language">Select Language</string>
    <string name="text_number">Number</string>
    <string name="text_internet">Internet</string>
    <string name="text_base_price">Base Price</string>
    <string name="text_distance_price">Distance Price</string>
    <string name="text_time_cost">Time Price</string>
    <string name="text_tex">Tax</string>
    <string name="text_surge_price">Surge Charges</string>
    <string name="text_total_service_cost">TOTAL SERVICE PRICE</string>
    <string name="text_item_price_2">Item Price</string>
    <string name="text_specification_price">Specification Price</string>
    <string name="text_total_item_cost">TOTAL ITEM PRICE</string>
    <string name="text_card">Card</string>
    <string name="text_cash">Cash</string>
    <string name="text_language">Language</string>
    <string name="text_get_code">Get Code</string>
    <string name="text_pik_up_code">Pickup Code :</string>
    <string name="text_cancel_request">Cancel Request</string>
    <string name="text_not_valid_Time">Not valid Time</string>
    <string name="text_opening_time">Opening Time</string>
    <string name="text_closing_time">Closing Time</string>
    <string name="text_delivery_time">Delivery Time (min)</string>
    <string name="text_price_rating">Price Rating</string>
    <string name="text_other">Other</string>
    <string name="text_payment_by">Pay By</string>
    <string name="text_service_fees">Service Fees</string>
    <string name="text_order_fees">Order Fees</string>
    <string name="text_paid_order">Paid Order</string>
    <string name="text_paid_share">Paid Delivery</string>
    <string name="text_profit">Profit</string>
    <string name="text_Earn">Earning</string>
    <string name="text_prompt_select">Select</string>
    <string name="text_cancel_order">Cancel Order</string>
    <string name="text_done">Done</string>
    <string name="text_order_detail">Order Detail</string>
    <string name="text_order_number">Order No.</string>
    <string name="text_start_range">Start</string>
    <string name="text_end_range">End</string>
    <string name="text_menu">Menu</string>
    <string name="msg_order_cancel_reason_one">Order item is out of stock.</string>
    <string name="msg_order_cancel_reason_two">Delivery address is not reachable.</string>
    <string name="text_select_vehicle">Select Vehicle</string>
    <string name="text_how_would_you_like_to_assign_delviery_man">How would you like to
        assign\nDeliveryman?</string>
    <string name="text_assign_automaticly">Assign Automatically</string>
    <string name="text_assign_manual">Assign Manual</string>
</resources>