<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_orders"
        android:enabled="true"
        android:icon="@drawable/ic_orders"
        android:title="@string/text_orders"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_delivery"
        android:enabled="true"
        android:icon="@drawable/ic_deliveries"
        android:title="@string/text_deliveries"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_item"
        android:enabled="true"
        android:icon="@drawable/ic_view_list_black_24dp"
        android:title="@string/text_menu"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_user"
        android:enabled="true"
        android:icon="@drawable/ic_man_user_fill"
        android:title="@string/text_account"
        app:showAsAction="ifRoom"/>
</menu>