<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/llOrderPayment"
              xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@color/color_app_divider"
              android:gravity="center"
              android:orientation="horizontal">

    <com.edelivery.store.widgets.CustomTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingBottom="@dimen/dimen_app_edit_text_padding"
        android:paddingTop="@dimen/dimen_app_edit_text_padding"
        android:text="@string/text_order"
        android:textColor="@color/color_app_text"
        android:textSize="10sp"
        app:typefaceTv="fonts/AvenirLTStd-Medium.otf"/>

    <com.edelivery.store.widgets.CustomTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingBottom="@dimen/dimen_app_edit_text_padding"
        android:paddingTop="@dimen/dimen_app_edit_text_padding"
        android:text="@string/text_payment_by"
        android:visibility="gone"
        android:textColor="@color/color_app_text"

        android:textSize="10sp"

        app:typefaceTv="fonts/AvenirLTStd-Medium.otf"/>

    <com.edelivery.store.widgets.CustomTextView
        android:id="@+id/tvTotal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingBottom="@dimen/dimen_app_edit_text_padding"

        android:paddingTop="@dimen/dimen_app_edit_text_padding"
        android:text="@string/text_total"
        android:textColor="@color/color_app_text"
        android:textSize="10sp"
        app:typefaceTv="fonts/AvenirLTStd-Medium.otf"/>


    <com.edelivery.store.widgets.CustomTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingBottom="@dimen/dimen_app_edit_text_padding"
        android:paddingTop="@dimen/dimen_app_edit_text_padding"
        android:text="@string/text_order_fees"

        android:textColor="@color/color_app_text"
        android:textSize="10sp"
        app:typefaceTv="fonts/AvenirLTStd-Medium.otf"/>

    <com.edelivery.store.widgets.CustomTextView
        android:id="@+id/customFontTextView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingBottom="@dimen/dimen_app_edit_text_padding"
        android:paddingTop="@dimen/dimen_app_edit_text_padding"
        android:text="@string/text_profit"
        android:textColor="@color/color_app_text"

        android:textSize="10sp"
        app:typefaceTv="fonts/AvenirLTStd-Medium.otf"/>

    <com.edelivery.store.widgets.CustomTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingBottom="@dimen/dimen_app_edit_text_padding"
        android:paddingTop="@dimen/dimen_app_edit_text_padding"
        android:text="@string/text_paid_share"
        android:textColor="@color/color_app_text"
        android:textSize="10sp"

        app:typefaceTv="fonts/AvenirLTStd-Medium.otf"/>

    <com.edelivery.store.widgets.CustomTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingBottom="@dimen/dimen_app_edit_text_padding"
        android:paddingTop="@dimen/dimen_app_edit_text_padding"
        android:text="@string/text_paid_order"
        android:textColor="@color/color_app_text"

        android:textSize="10sp"

        app:typefaceTv="fonts/AvenirLTStd-Medium.otf"/>

    <com.edelivery.store.widgets.CustomTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingBottom="@dimen/dimen_app_edit_text_padding"
        android:paddingTop="@dimen/dimen_app_edit_text_padding"
        android:text="@string/text_Earn"
        android:textColor="@color/color_app_text"

        android:textSize="10sp"
        app:typefaceTv="fonts/AvenirLTStd-Medium.otf"/>

</LinearLayout>