<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_horizontal_margin"
    app:theme="@style/AppTheme">

    <com.edelivery.store.widgets.CustomTextView
        android:id="@+id/tvDialogAlertTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        android:text="@string/text_cancel_order"
        android:textSize="@dimen/size_app_text_large"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rbReasonOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/msg_order_cancel_reason_one"
            android:theme="@style/CustomRadioButton"/>

        <RadioButton
            android:id="@+id/rbReasonTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/msg_order_cancel_reason_two"
            android:theme="@style/CustomRadioButton"/>

        <RadioButton
            android:id="@+id/rbReasonOthers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_other"
            android:theme="@style/CustomRadioButton"/>
    </RadioGroup>

    <com.edelivery.store.widgets.CustomInputEditText
        android:id="@+id/etOthersReason"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:ems="10"
        android:visibility="gone"/>

    <include layout="@layout/include_alter_btn"/>
</LinearLayout>

