<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin">

    <com.edelivery.store.widgets.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        android:text="@string/text_select_vehicle"
        android:textColor="@color/color_app_text"
        android:textSize="@dimen/size_app_text_large" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcvVehicle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </androidx.recyclerview.widget.RecyclerView>


    <com.edelivery.store.widgets.CustomTextView
        android:id="@+id/tvDriverAssign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        android:text="@string/text_how_would_you_like_to_assign_delviery_man"
        android:textColor="@color/color_app_text"
        android:textSize="@dimen/size_app_text_large" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rbAutomaticAssign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/text_assign_automaticly"
            android:theme="@style/CustomRadioButton" />

        <RadioButton
            android:id="@+id/rbManualAssign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_assign_manual"
            android:theme="@style/CustomRadioButton" />

    </RadioGroup>

    <include layout="@layout/include_alter_btn" />

</LinearLayout>