<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_app_bg"
    android:orientation="vertical">

    <com.edelivery.store.widgets.CustomTextView
        android:id="@+id/tvDialogAlertTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="@string/text_order_detail"
        android:textSize="@dimen/size_app_text_large"/>

    <com.edelivery.store.widgets.CustomTextView
        android:id="@+id/tvOrderNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:text="@string/text_order_number"
        android:textSize="@dimen/size_app_label_regular"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcvOrderProductItem"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clipToPadding="false"
        android:scrollbars="horizontal">

    </androidx.recyclerview.widget.RecyclerView>

    <com.edelivery.store.widgets.CustomButton
        android:id="@+id/btnDone"
        style="@style/CustomButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_done"
        android:visibility="visible"/>

</LinearLayout>
